# stm32f407zgt6

./: .gitattributes  .mxproject  CMakeLists.txt  Makefile  STM32F407ZGTx_FLASH.ld  build.bat  config.bat  env.bat  openocd.cfg  readme.md  stm32f407zgt6.ioc
Core/: CMakeLists.txt
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: freertos.c  gpio.c  main.c  rng.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usart.c
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
Middlewares/: CMakeLists.txt
application/: CMakeLists.txt
application/os/: platform_stub.c
application/qth-sdk-mcu-hex/: mcu_api.c  mcu_api.h  protocol.c  protocol.h  readme.txt  system.c  system.h  wifi.h
application/qth-sdk-mcu-hex/doc/: p11pjq_20230218133151695.xls  移远16进制协议V1.3（采用新的物模型表达）.docx
application/shell/: shell_cmds.c
scripts/: project_stm32f407zgt6.cmake  toolchain_arm-none-eabi-gcc.cmake
tools/OpenOCD-20211118-0.11.0/share/openocd/scripts/interface/: stlink-dap.cfg  stlink.cfg  xds110.cfg
tools/OpenOCD-20211118-0.11.0/share/openocd/scripts/interface/ftdi/: flossjtag.cfg
